[gd_scene load_steps=9 format=2]

[ext_resource path="res://slime.gd" type="Script" id=1]
[ext_resource path="res://chars, tiles, items/enemy-sprites/enemies/slimeBlue.png" type="Texture" id=2]
[ext_resource path="res://chars, tiles, items/enemy-sprites/enemies/slimeBlue_blue.png" type="Texture" id=3]
[ext_resource path="res://chars, tiles, items/enemy-sprites/enemies/slimeBlue_squashed.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "crawl",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18, 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 27, 12 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "crawl"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[node name="checkfloor" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 0, -11 )
shape = SubResource( 3 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( 0, 4 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
